gccida/c1/loc_descriptor
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loc_descriptor/src/dwarf2out.c:8425:49: error: use of undeclared identifier 'machine_mode'
result = mem_loc_descriptor( rtl->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtl)); 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loc_descriptor/src/dwarf2out.c:8425:64: error: expected expression
result = mem_loc_descriptor( rtl->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtl)); 
                                                               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loc_descriptor/src/obj/dwarf2out.o] Error 1
